[package]
name = "tree_ord"
version = "0.1.0"
edition = "2021"
authors = ["Aaron Kutch <aaronkutch@att.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AaronKutch/tree_ord"
documentation = "https://docs.rs/tree_ord"
description = "An ordering that skips prefixes in tree searches"
keywords = ["recast", "translate", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dev-dependencies]
rand_xoshiro = "0.6"
